<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".fragment_linearlayout">

    <!-- TODO: Update blank fragment layout -->

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="@dimen/Padding"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/tvTitulo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textAlignment="center"
               android:textColor="@color/black"
               android:textSize="@dimen/tituloTamaño"
               android:text="@string/TituloFragment1" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/tvNombre"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/Nombre"
               android:textColor="@color/black"
               android:textSize="@dimen/subTitulo" />

           <EditText
               android:id="@+id/etNombre"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="text"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/tvCiudad"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="@color/black"
               android:textSize="@dimen/subTitulo"
               android:text="@string/ciudad" />
           <EditText
               android:id="@+id/etCiudad"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="text"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/tvprofesion"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="@color/black"
               android:textSize="@dimen/subTitulo"
               android:text="@string/profesion" />
           <EditText
               android:id="@+id/etprofesion"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="text"/>

       </LinearLayout>
   </LinearLayout>
</RelativeLayout>